--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Fahmi Miftah Farid">Fahmi Miftah</h1>
+          <h1 class="name" title="Fahmi Miftah Farid">Fikri Husni Mubaroq</h1>
 
           <p class="title">Content Creator</p>
         </div>
