update profile photo and size

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/photo.webp" class="rounded-full object-cover" alt="Fikri Husni Mubaroq" width="100" height="150">
+          <img src="./assets/images/photo.webp" class="rounded-full object-cover" alt="Fikri Husni Mubaroq" >
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Fahmi Miftah Farid">Fikri Husni Mubaroq</h1>
+          <h1 class="name" title="Fikri Husni Mubaroq">Fikri Husni Mubaroq</h1>
 
           <p class="title">Frontend Web Developer</p>
         </div>
