--- a/index.html
+++ b/index.html
@@ -268,9 +268,7 @@
                   ● Optimizing Core Web Vitals (CLS, LCP, TBT, FCP) landing pages.
                 </li>
                 <li>
-                  ● Responsible for monitoring changes in web pages and selectors on the TikTok and Shopee websites for
-                  Chrome extension
-                  purposes.
+                  ● Responsible for Scraping & automation marketplace websites using javascript
                 </li>
                 <li>
                   ● Monitoring and reporting on error and performance Website.
