--- a/index.html
+++ b/index.html
@@ -426,6 +426,10 @@
             </li>
 
             <li class="filter-item">
+              <button data-filter-btn>Landing page</button>
+            </li>
+
+            <li class="filter-item">
               <button data-filter-btn>Javascript</button>
             </li>
 
@@ -454,6 +458,10 @@
               </li>
 
               <li class="select-item">
+                <button data-select-item>Landing page</button>
+              </li>
+
+              <li class="select-item">
                 <button data-select-item>Javascript</button>
               </li>
 
@@ -466,6 +474,26 @@
 
           <ul class="project-list">
 
+            <li class="project-item  active" data-filter-item data-category="Landing page">
+              <a href="https://landing-page-crumple-app.vercel.app/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/projects/landing-page-crumple-app.webp" width="100" height="200"
+                    alt="Landing Page Crumple App" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Landing Page Crumple App</h3>
+
+                <p class="project-category">
+                  Reactjs | Typescript
+                </p>
+
+              </a>
+            </li>
             <li class="project-item  active" data-filter-item data-category="PHP">
               <a href="#">
 
@@ -528,7 +556,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="Javascript">
-              <a href="#">
+              <a href="https://todos-app-eta-seven.vercel.app/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
