--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
               </a>
             </li>
             <li class="project-item  active" data-filter-item data-category="PHP">
-              <a href="#">
+              <a href="https://quesioner.fkrmubaroq.my.id/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -516,8 +516,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="PHP">
-              <a href="#">
-
+              <a href="https://mon-ipk.fkrmubaroq.my.id/" target="_blank">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -536,7 +535,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="PHP">
-              <a href="#">
+              <a href="https://hcis.fkrmubaroq.my.id/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -546,7 +545,7 @@
                   <img src="./assets/images/projects/hris.webp" alt="HRIS" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Human Resource Information System</h3>
+                <h3 class="project-title">Human Capital Information System</h3>
 
                 <p class="project-category">
                   Codeingiter | Lumen | JQuery | Mysql
@@ -596,7 +595,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="PHP">
-              <a href="#">
+              <a href="http://e-library.fkrmubaroq.my.id/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -616,7 +615,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="PHP">
-              <a href="#">
+              <a href="https://bursa-kerja.fkrmubaroq.my.id/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -636,7 +635,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="PHP">
-              <a href="#">
+              <a href="https://pmb.fkrmubaroq.my.id/admin" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -647,6 +646,46 @@
                 </figure>
 
                 <h3 class="project-title">Penerimaan Mahasiswa Baru</h3>
+
+                <p class="project-category">
+                  PHP | Codeigniter | JQuery | Mysql
+                </p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="PHP">
+              <a href="http://disinfectant.fkrmubaroq.my.id/admin" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/projects/disinfektan.webp" alt="Disinfectant" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Disinfectant schedule</h3>
+
+                <p class="project-category">
+                  PHP | Codeigniter | JQuery | Mysql
+                </p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="PHP">
+              <a href="http://catalog-product.fkrmubaroq.my.id/admin" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/projects/catalog.webp" alt="Disinfectant" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Catalog Products</h3>
 
                 <p class="project-category">
                   PHP | Codeigniter | JQuery | Mysql
