update project Todo Board

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                 <h3 class="project-title">Todo Board</h3>
 
                 <p class="project-category">
-                  Javascript | Next.Js | Mysql
+                  Javascript | Next.Js | Typescript
                 </p>
 
               </a>
