--- a/index.html
+++ b/index.html
@@ -255,31 +255,22 @@
 
               <ul class="timeline-text">
                 <li>
-                  ● Collaborated with the UI/UX design team to develop and implement a landing page that integrates
-                  functionality and
-                  design.
-                </li>
-                <li>
-                  ● Collaborate with the design and backend development teams to align UI development with the backend
-                  and ensure seamless
-                  integration.
+                  ● Collaborate with UI/UX designers to create wireframes and mockups, and translate them into
+                  interactive web interfaces.
                 </li>
                 <li>
                   ● Optimizing Core Web Vitals (CLS, LCP, TBT, FCP) landing pages.
                 </li>
                 <li>
-                  ● Responsible for Scraping & automation marketplace websites using javascript
+                  ● Gained experience in web scraping techniques using Chrome Extensions to extract structured data from
+                  websites.
                 </li>
                 <li>
                   ● Monitoring and reporting on error and performance Website.
                 </li>
                 <li>
-                  ● Manage and implement CI/CD infrastructure to support fast and efficient software development.
-                </li>
-                <li>
-                  ● Create web-based tutorials, providing interactive guidance to users on utilizing products. Tutorials
-                  include
-                  practical steps, video demonstrations
+                  ● Configured deployment scripts to deploy the application to multiple environments, including staging
+                  and production.
                 </li>
               </ul>
 
