update about me

--- a/index.html
+++ b/index.html
@@ -184,9 +184,13 @@
 
         <section class="about-text">
           <p>
-            I am a self-taught front-end web developer. I primarily focus on writing clean, elegant, and efficient code.
-            I also review existing code and how to improve it.
-            Over the past two 2 years, I have worked for companies that specialize in digital marketing web applications
+            Dedicated Full Stack Web Developer passionate about creating user-friendly and impactful web applications.
+            With a strong
+            background in both frontend and backend development, I strive to deliver solutions that prioritize user
+            experience and
+            accessibility. A collaborative team player with a growth mindset, I enjoy learning from others and
+            continuously
+            improving my skills.
           </p>
 
         </section>
