update company links, add some projects

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Fikri Husni Mubaroq">Fikri Husni Mubaroq</h1>
 
-          <p class="title">Frontend Web Developer</p>
+          <p class="title">Fullstack Web Developer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -253,8 +253,15 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">PT. MEA Digital Marketing - Jr. Front End Web Developer</h4>
-
+              <a target="_blank" href="https://komunitasmea.com" class="h4 timeline-item-title">
+                <span>PT. MEA Digital Marketing - Jr. Front End Web Developer</span>
+                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" color="white" height="18"
+                  width="18" xmlns="http://www.w3.org/2000/svg" style="color: white;">
+                  <path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"
+                    d="M384 224v184a40 40 0 0 1-40 40H104a40 40 0 0 1-40-40V168a40 40 0 0 1 40-40h167.48M336 64h112v112M224 288 440 72">
+                  </path>
+                </svg>
+              </a>
               <span>September 2021 — September 2023</span>
 
               <ul class="timeline-text">
@@ -281,8 +288,15 @@
             </li>
 
             <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">CV. Dian Global Tech - Fullstack Web</h4>
+              <a target="_blank" href="https://dianglobaltech.co.id/" class="h4 timeline-item-title">
+                <span>CV. Dian Global Tech - Fullstack Web</span>
+               <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" color="white" height="18"
+                  width="18" xmlns="http://www.w3.org/2000/svg" style="color: white;">
+                  <path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"
+                    d="M384 224v184a40 40 0 0 1-40 40H104a40 40 0 0 1-40-40V168a40 40 0 0 1 40-40h167.48M336 64h112v112M224 288 440 72">
+                  </path>
+                </svg>
+              </a>
 
               <span>September 2020 — July 2021</span>
 
@@ -305,7 +319,16 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">PT BISA Artifisial Indonesia (BISA.AI) - Frontend Developer</h4>
+              <a target="_blank" href="https://bisa.ai/" class="h4 timeline-item-title">
+                <span>PT BISA Artifisial Indonesia (BISA.AI) - Frontend Developer</span>
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" color="white" height="18"
+                  width="18" xmlns="http://www.w3.org/2000/svg" style="color: white;">
+                  <path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"
+                    d="M384 224v184a40 40 0 0 1-40 40H104a40 40 0 0 1-40-40V168a40 40 0 0 1 40-40h167.48M336 64h112v112M224 288 440 72">
+                  </path>
+                </svg>
+              </a>
+
 
               <span>March 2020 — September 2020</span>
 
@@ -338,6 +361,11 @@
               <img title="Javascript" class="rounded-image" src="/assets/images/logo/logo-js.webp" width="50"
                 height="50" />
               <span>Javascript</span>
+            </li>
+            <li>
+              <img title="Web Scraping" class="rounded-image" src="/assets/images/logo/web-scraping.png" width="50"
+                height="50" />
+              <span>Web Scraping</span>
             </li>
             <li>
               <img title="Javascript" class="rounded-image" src="/assets/images/logo/logo-jquery.webp" width="50"
@@ -421,15 +449,15 @@
             </li>
 
             <li class="filter-item">
+              <button data-filter-btn>MEA Digital Marketing</button>
+            </li>
+
+            <li class="filter-item">
               <button data-filter-btn>Landing page</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Javascript</button>
-            </li>
-
-            <li class="filter-item">
-              <button data-filter-btn>PHP</button>
+              <button data-filter-btn>Projects</button>
             </li>
 
           </ul>
@@ -453,15 +481,13 @@
               </li>
 
               <li class="select-item">
+                <button data-select-item>MEA Digital Marketing</button>
+              </li>
+              <li class="select-item">
                 <button data-select-item>Landing page</button>
               </li>
-
               <li class="select-item">
-                <button data-select-item>Javascript</button>
-              </li>
-
-              <li class="select-item">
-                <button data-select-item>PHP</button>
+                <button data-select-item>Projects</button>
               </li>
             </ul>
 
@@ -469,6 +495,67 @@
 
           <ul class="project-list">
 
+            <li class="project-item  active" data-filter-item data-category="MEA Digital Marketing">
+              <a href="https://komunitasmea.com" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/projects/mea-komunitasmea.webp" width="100" height="200" alt="Platform UMKM"
+                    loading="lazy">
+                </figure>
+
+                <h3 class="project-title" style="font-size:12px">Platform UMKM For Digital Marketing, Online Course,
+                  Tools, Service Marketplace & Social Media </h3>
+
+                <p class="project-category">
+                  Reactjs | Javascript
+                </p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="MEA Digital Marketing">
+              <a href="https://gowebin.co.id" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/projects/mea-gowebin.webp" width="100" height="200" alt="Platform UMKM"
+                    loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Landing Page Builder</h3>
+
+                <p class="project-category">
+                  Next.Js | Typescript
+                </p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="MEA Digital Marketing">
+              <a href="https://sebari.co.id" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/projects/mea-sebari.webp" width="100" height="200" alt="Platform UMKM"
+                    loading="lazy">
+                </figure>
+
+                <h3 class="project-title" style="font-size:14">Broadcast Message with integration whatsapp</h3>
+
+                <p class="project-category">
+                  Next.Js | Javascript
+                </p>
+
+              </a>
+            </li>
             <li class="project-item  active" data-filter-item data-category="Landing page">
               <a href="https://landing-page-crumple-app.vercel.app/" target="_blank">
 
@@ -489,7 +576,7 @@
 
               </a>
             </li>
-            <li class="project-item  active" data-filter-item data-category="PHP">
+            <li class="project-item  active" data-filter-item data-category="Projects">
               <a href="https://quesioner.fkrmubaroq.my.id/" target="_blank">
 
                 <figure class="project-img">
@@ -510,7 +597,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="PHP">
+            <li class="project-item  active" data-filter-item data-category="Projects">
               <a href="https://mon-ipk.fkrmubaroq.my.id/" target="_blank">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -529,7 +616,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="PHP">
+            <li class="project-item  active" data-filter-item data-category="Projects">
               <a href="https://hcis.fkrmubaroq.my.id/" target="_blank">
 
                 <figure class="project-img">
@@ -549,7 +636,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Javascript">
+            <li class="project-item  active" data-filter-item data-category="Projects">
               <a href="https://todos-app-eta-seven.vercel.app/" target="_blank">
 
                 <figure class="project-img">
@@ -569,7 +656,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Javascript">
+            <li class="project-item  active" data-filter-item data-category="Projects">
               <a href="#">
 
                 <figure class="project-img">
@@ -589,7 +676,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="PHP">
+            <li class="project-item  active" data-filter-item data-category="Projects">
               <a href="https://e-library.fkrmubaroq.my.id/" target="_blank">
 
                 <figure class="project-img">
@@ -609,7 +696,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="PHP">
+            <li class="project-item  active" data-filter-item data-category="Projects">
               <a href="https://bursa-kerja.fkrmubaroq.my.id/" target="_blank">
 
                 <figure class="project-img">
@@ -629,7 +716,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="PHP">
+            <li class="project-item  active" data-filter-item data-category="Projects">
               <a href="https://pmb.fkrmubaroq.my.id/admin" target="_blank">
 
                 <figure class="project-img">
@@ -649,7 +736,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="PHP">
+            <li class="project-item  active" data-filter-item data-category="Projects">
               <a href="https://disinfectant.fkrmubaroq.my.id/admin" target="_blank">
 
                 <figure class="project-img">
@@ -669,7 +756,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="PHP">
+            <li class="project-item  active" data-filter-item data-category="Projects">
               <a href="https://catalog-product.fkrmubaroq.my.id/admin" target="_blank">
 
                 <figure class="project-img">
