update skill & experience

--- a/index.html
+++ b/index.html
@@ -279,6 +279,14 @@
                 <li>
                   ● Monitoring and reporting on error and performance Website.
                 </li>
+                
+                <li>
+                  ● implementation Unit Testing with frameworks using Jest. 
+                </li>
+
+                <li>
+                  ● implementation CI/CD with tools using GitHub Actions.
+                </li>
                 <li>
                   ● Configured deployment scripts to deploy the application to multiple environments, including staging
                   and production.
@@ -420,6 +428,11 @@
               <img title="Mongodb" class="rounded-image" src="/assets/images/logo/logo-mongodb.webp" width="50"
                 height="50" />
               <span>Mongodb</span>
+            </li>
+            <li>
+              <img title="Jira" class="rounded-image" src="/assets/images/logo/logo-jira.webp" width="50"
+                height="50" />
+              <span>Jira Software</span>
             </li>
 
           </ul>
