--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 </li>
                 
                 <li>
-                  ● implementation Unit Testing with frameworks using Jest. 
+                  ● implementation Unit Testing using Jest. 
                 </li>
 
                 <li>
