add: project lp ecommerce

--- a/index.html
+++ b/index.html
@@ -589,6 +589,26 @@
 
               </a>
             </li>
+            <li class="project-item  active" data-filter-item data-category="Landing page">
+              <a href="https://landing-page-ecommerce-eight.vercel.app/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/projects/landing-page-ecommerce.webp" width="100" height="200"
+                    alt="Landing Page Crumple App" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Landing Page E Commerce</h3>
+
+                <p class="project-category">
+                  Next.Js | Typescript
+                </p>
+
+              </a>
+            </li>
             <li class="project-item  active" data-filter-item data-category="Projects">
               <a href="https://quesioner.fkrmubaroq.my.id/" target="_blank">
 
