feat: add projet notion clone

--- a/index.html
+++ b/index.html
@@ -184,13 +184,10 @@
 
         <section class="about-text">
           <p>
-            Dedicated Full Stack Web Developer passionate about creating user-friendly and impactful web applications.
-            With a strong
-            background in both frontend and backend development, I strive to deliver solutions that prioritize user
-            experience and
-            accessibility. A collaborative team player with a growth mindset, I enjoy learning from others and
-            continuously
-            improving my skills.
+          A frontend developer with over 2 years of experience in creating more than 20 landing pages, tools, and various
+          responsive web applications using HTML, CSS, JavaScript, Webpack, TypeScript, React, Next.js, Redux, Redux Toolkit, Zod,
+          and Zustand. I also have experience in developing Chrome extensions for data scraping and automation. I am highly
+          enthusiastic about learning from others and enhancing my skills.
           </p>
 
         </section>
@@ -508,6 +505,26 @@
 
           <ul class="project-list">
 
+            <li class="project-item  active" data-filter-item data-category="Projects">
+              <a href="https://notion-clone-dun-tau.vercel.app/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/projects/notion-clone.webp" width="100" height="200" alt="Notion"
+                    loading="lazy">
+                </figure>
+
+                <h3 class="project-title" style="font-size:12px">Notion Clone App </h3>
+
+                <p class="project-category">
+                  Nextjs | Typescript | Convex | Clerk
+                </p>
+
+              </a>
+            </li>
             <li class="project-item  active" data-filter-item data-category="MEA Digital Marketing">
               <a href="https://komunitasmea.com" target="_blank">
 
