feat:add work experience 'knitto tekstile'

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Fikri Husni Mubaroq">Fikri Husni Mubaroq</h1>
 
-          <p class="title">Fullstack Web Developer</p>
+          <p class="title">Frontend Web Developer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -184,10 +184,11 @@
 
         <section class="about-text">
           <p>
-          A frontend developer with over 2 years of experience in creating more than 20 landing pages, tools, and various
-          responsive web applications using HTML, CSS, JavaScript, Webpack, TypeScript, React, Next.js, Redux, Redux Toolkit, Zod,
-          and Zustand. I also have experience in developing Chrome extensions for data scraping and automation. I am highly
-          enthusiastic about learning from others and enhancing my skills.
+        Frontend developer with over 2 years of experience in creating more than 20 landing pages, tools, and various responsive
+        web applications using HTML, CSS, JavaScript, Webpack, TypeScript, React, Next.js, Redux, Redux Toolkit, Zod, and
+        Zustand. I also have experience in developing Chrome extensions for data scraping and automation. I am highly
+        enthusiastic about learning from others and enhancing my skills. In addition to that, I have experience in creating UI
+        libraries and documenting them using Storybook.
           </p>
 
         </section>
@@ -248,6 +249,34 @@
 
           <ol class="timeline-list">
 
+            <li class="timeline-item">
+
+              <a target="_blank" href="https://komunitasmea.com" class="h4 timeline-item-title">
+                <span>PT. Knitto Tekstil Indonesia - Front End Web Developer</span>
+                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" color="white" height="18"
+                  width="18" xmlns="http://www.w3.org/2000/svg" style="color: white;">
+                  <path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"
+                    d="M384 224v184a40 40 0 0 1-40 40H104a40 40 0 0 1-40-40V168a40 40 0 0 1 40-40h167.48M336 64h112v112M224 288 440 72">
+                  </path>
+                </svg>
+              </a>
+              <span>Mei 2024 — Present</span>
+
+              <ul class="timeline-text">
+                <li>● Developed websites and internal apps using React.js, Ant Design, Tailwind CSS, Redux, RTK Query, and Next.js.</li>
+                <li>● Collaboration with UI/UX for UI slicing and integration with backend</li>
+                <li>● Convert CSS modules to use Tailwind utility-first classes</li>
+                <li>● Implemented a monorepo strategy to manage multiple applications and libraries within a single integrated repository,
+                enabling more efficient collaboration among teams and easier code management.</li>
+                <li>● Designed and implemented a Chrome Extension specifically for the Qiscus platform to streamline various operational
+                tasks and making it easier for teams to manage customer interactions and operations.</li>
+                <li>● Developed Custom UI Library that allows teams to easily integrate and reuse components across different projects,
+                reducing development time and maintaining high-quality UI standards.</li>
+                <li>● Utilized Storybook to present custom UI library components in an interactive and user-friendly, allowing developers to
+                easily view, test, and modify components in real-time.</li>
+              </ul>
+
+            </li>
             <li class="timeline-item">
 
               <a target="_blank" href="https://komunitasmea.com" class="h4 timeline-item-title">
