feat:add button download resume

--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 
           </li>
 
+          <a class="resume-btn" href="./assets/resume/Fikri-Husni-Mubaroq.pdf" target="_blank" download>
+            <span>Download Resume</span>
+          </a>
         </ul>
 
         <div class="separator"></div>
