feat:ad project 'jira clone app'

--- a/index.html
+++ b/index.html
@@ -538,6 +538,26 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="Projects">
+              <a href="https://jira-clone-omega-seven.vercel.app/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/projects/jira-clone.webp" width="100" height="200" alt="Notion"
+                    loading="lazy">
+                </figure>
+
+                <h3 class="project-title" style="font-size:12px">Jira Clone App </h3>
+
+                <p class="project-category">
+                  Nextjs | Typescript | Appwrite
+                </p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="Projects">
               <a href="https://notion-clone-dun-tau.vercel.app/" target="_blank">
 
                 <figure class="project-img">
