--- a/index.html
+++ b/index.html
@@ -538,6 +538,26 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="Projects">
+              <a href="https://github.com/fkrmubaroq/text-to-flowchart-ai" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/projects/flow-scribe.webp" width="100" height="200" alt="Notion"
+                    loading="lazy">
+                </figure>
+
+                <h3 class="project-title" style="font-size:12px">AI flowchart generator </h3>
+
+                <p class="project-category">
+                  React | Typescript | Ollama | Model Mistral | Mermaid.js
+                </p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="Projects">
               <a href="https://jira-clone-omega-seven.vercel.app/" target="_blank">
 
                 <figure class="project-img">
